// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSelect > matches default variant 1`] = `
<DocumentFragment>
  <div
    class="sc-fHjqbK dWJNfx aje-multiselect sc-hmdnzv bFxqKM"
  >
    <label
      class="sc-eqUzNf citWII"
      for="react-aria-:r2:"
      id="react-aria-:r3:"
    >
      label
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="react-aria-:r7: react-aria-:r3:"
      class="sc-dLNtp sc-fUnNpA hkAcSC kvjCcT aje-btn sc-hzhKNl bMDZbd aje-btn--dropdown is-medium"
      id="react-aria-:r2:"
      type="button"
    >
      Select an option
      <i
        aria-hidden="true"
        class="sc-cPiJYC wZRQV aje-icon material-icons is-medium"
      >
        arrow_drop_down
      </i>
    </button>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > matches floating variant 1`] = `
<DocumentFragment>
  <div
    class="sc-fHjqbK dWJNfx aje-multiselect sc-hmdnzv bFxqKM aje-multiselect--floating"
  >
    <div
      class="sc-feUYzb kPLfyu"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="react-aria-:rf: react-aria-:rb:"
        class="sc-dLNtp sc-fUnNpA hkAcSC kvjCcT aje-btn sc-hzhKNl bMDZbd aje-btn--dropdown is-medium"
        id="react-aria-:ra:"
        type="button"
      >
        <i
          aria-hidden="true"
          class="sc-cPiJYC wZRQV aje-icon material-icons is-medium"
        >
          arrow_drop_down
        </i>
      </button>
      <label
        class="sc-eqUzNf citWII"
        for="react-aria-:ra:"
        id="react-aria-:rb:"
      >
        label
      </label>
    </div>
  </div>
</DocumentFragment>
`;
